.metadata/.plugins/org.eclipse.cdt.ui/assignment4.build.log
17:29:35 **** Incremental Build of configuration Debug for project assignment4 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\assignment4.o" "..\\src\\assignment4.c" 
..\src\assignment4.c: In function 'main':
..\src\assignment4.c:20:8: error: expected ':' or '...' before ';' token
  case 1;
        ^
..\src\assignment4.c:23:8: error: expected ':' or '...' before ';' token
  case 2;
        ^
..\src\assignment4.c:26:8: error: expected ':' or '...' before ';' token
  case 3;
        ^
..\src\assignment4.c:29:8: error: expected ':' or '...' before ';' token
  case 4;
        ^
..\src\assignment4.c:32:8: error: expected ':' or '...' before ';' token
  case 5;
        ^
..\src\assignment4.c:35:8: error: expected ':' or '...' before ';' token
  case 6;
        ^
..\src\assignment4.c:38:8: error: expected ':' or '...' before ';' token
  case 7;
        ^
..\src\assignment4.c:41:9: error: expected ':' before ';' token
  default;
         ^
         :
..\src\assignment4.c:21:2: warning: statement will never be executed [-Wswitch-unreachable]
  printf("Monday");
  ^~~~~~~~~~~~~~~~

17:29:36 Build Failed. 8 errors, 1 warnings. (took 957ms)

